--- a/index.css
+++ b/index.css
@@ -59,6 +59,27 @@ header .carousel-inner .item {
   background-color: #edbb00;
   border-color: #edbb00;
 }
+.h {
+  text-align: center;
+}
+.carrier {
+  display: flex;
+  width: 100vw;
+  justify-content: space-evenly;
+  margin-top: 30px;
+  flex-wrap: wrap;
+}
+.mei {
+  width: 40vw;
+  height: auto;
+  object-fit: cover;
+}
+.mage {
+  width: 40vw;
+}
+.info {
+  width: 40vw;
+}
 /*responsive css*/
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -100,5 +121,16 @@ header .carousel-inner .item {
   }
   .carousel-caption a {
     padding: 10px 25px;
+  }
+  .mei {
+    width: 100vw;
+    height: auto;
+    object-fit: cover;
+  }
+  .mage {
+    width: 100vw;
+  }
+  .info {
+    width: 100vw;
   }
 }
